Update dependency gradle to v7.2 (#181)
* Update dependency gradle to v7.2

* Avoid Kapt error in JDK 16

https://youtrack.jetbrains.com/issue/KT-45545#focus=Comments-27-5173480.0-0

* Suppress warning messages

Co-authored-by: Renovate Bot <bot@renovateapp.com>
Co-authored-by: Toshihiro Nakamura <toshihiro.nakamura@gmail.com>