@@ -3,18 +3,6 @@ plugins {
     kotlin("kapt")
 }
 
-tasks {
-    val jvmTarget = "1.8"
-
-    compileKotlin {
-        kotlinOptions.jvmTarget = jvmTarget
-    }
-
-    compileTestKotlin {
-        kotlinOptions.jvmTarget = jvmTarget
-    }
-}
-
 dependencies {
     val domaVersion: String by project
     kapt("org.seasar.doma:doma-processor:${domaVersion}")
@@ -28,4 +16,20 @@ spotless {
         trimTrailingWhitespace()
         endWithNewline()
     }
+}
+
+kotlin {
+    kotlinDaemonJvmArgs = listOf(
+        "-Dfile.encoding=UTF-8",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
+    )
 }
